[gd_scene load_steps=6 format=3 uid="uid://ttyngsx7731n"]

[ext_resource type="Script" uid="uid://uiusu0cnvkud" path="res://inventory_system/ui/inventory_ui.gd" id="1_erfyy"]
[ext_resource type="Resource" uid="uid://dxd33ds0omile" path="res://inventory_system/test_inventory.tres" id="2_msmyj"]
[ext_resource type="PackedScene" uid="uid://b5nd2lr8rntum" path="res://inventory_system/ui/inventory_grid_ui.tscn" id="3_msmyj"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_kakua"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msmyj"]

[node name="InventoryUI" type="Control" node_paths=PackedStringArray("persistent_grid", "temp_grid")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_erfyy")
persistent_grid = NodePath("PanelContainer/MarginContainer/HBoxContainer/ItemsContainer/PersistentItemContainer/InventoryGridUI")
temp_grid = NodePath("PanelContainer/MarginContainer/HBoxContainer/ItemsContainer/TempItemContainer/InventoryGridUI")
debug_inventory = ExtResource("2_msmyj")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.1
anchor_right = 0.8
anchor_bottom = 0.9

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ItemsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PersistentItemContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer/PersistentItemContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Persistent Items"
fit_content = true

[node name="InventoryGridUI" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer/PersistentItemContainer" instance=ExtResource("3_msmyj")]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer"]
layout_mode = 2

[node name="TempItemContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer/TempItemContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "Temp Items"
fit_content = true

[node name="InventoryGridUI" parent="PanelContainer/MarginContainer/HBoxContainer/ItemsContainer/TempItemContainer" instance=ExtResource("3_msmyj")]
layout_mode = 2
size_flags_vertical = 3

[node name="InformationContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 15

[node name="ItemIcon" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/InformationContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_kakua")
expand_mode = 4

[node name="NameLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer/InformationContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_msmyj")
bbcode_enabled = true
text = "Item Name"
fit_content = true
horizontal_alignment = 1

[node name="InformationLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/HBoxContainer/InformationContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "This is information about the item."
fit_content = true
